[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvela_astrometry"
version = "0.0.1"
description = ""
keywords = ["astronomy", "astrophysics", "pulsar"]

authors = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"},
    {name = "David Kaplan"}
]
maintainers = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "astropy>=6.1",
    "pint-pulsar>=1.1.3",
    "juliacall>=0.9",
    "emcee",
    "h5py",
    "corner",
    "matplotlib",
    "pyvela"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU General Public License Version 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
zip-safe = false
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.distutils.bdist_wheel]
universal = 0

[tool.aliases]
test = "pytest"